--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,10 +8,31 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 645px) {
+    flex-direction: column;
+.header-text {
+  text-align: center;
+}
+   
+    .header__cart {
+margin-top: 20px;
+
+    }
+    }
   }
 
   &__logo {
     display: flex;
+  
+
+    @media (max-width: 645px) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .imageSvg {
+        margin-left: 20px;
+      }
+    }
 
     img {
       margin-right: 15px;
