--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -5,9 +5,10 @@
   text-align: center;
   margin-bottom: 65px;
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
-  }
+&-wrapper {
+  display: flex;
+  justify-content: center;
+}
 
   &__image {
     width: 260px;
@@ -47,6 +48,10 @@
           box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
           border-radius: 5px;
           cursor: auto;
+        }
+        &.disabled {
+         opacity: 0.4;
+         pointer-events: none;
         }
       }
     }
