--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -2,16 +2,22 @@
 
 .sort {
   position: relative;
+
   &__label {
     display: flex;
     align-items: center;
 
     svg {
       margin-right: 8px;
+      &.rotated {
+        transform: rotate(180deg);
+        transition: transform 0.3s ease;
+      }
     }
 
     b {
       margin-right: 8px;
+      width: 118px;
     }
 
     span {
