--- a/src/scss/components/Search.module.scss
+++ b/src/scss/components/Search.module.scss
@@ -1,6 +1,11 @@
 .root {
     position: relative;
     left: -120px;
+  
+    @media (max-width: 1295px) {
+        left: 10px;
+          top: 15px;
+    }
 }
 
 .input{
@@ -11,6 +16,10 @@
     border-radius: 12px;
     font-size: 16px;
     transition: all 0.15s ease-in-out;
+    @media (max-width: 760px) and (max-width: 1295px) {
+     width: 300px;
+    }
+
     &:focus {
         border: 1px solid rgba(0, 0, 0, 0.3); 
     
